--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <ul class="nav-list">
         <li><a href="https://nexgenixcreativesolutions.github.io/home/">Home</a></li>
-        <li><a href="#https://nexgenixcreativesolutions.github.io/home/#about_us">About Us</a></li>
+        <li><a href="https://nexgenixcreativesolutions.github.io/home/#about_us">About Us</a></li>
         <li><a href="https://nexgenixcreativesolutions.github.io/home/#services">Services</a></li>
         <li><a href="https://nexgenixcreativesolutions.github.io/home/#reviews">Reviews</a></li>
 	<li><a href="#careers">Careers</a></li>
